--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
   padding: 1.5rem 0;
 }
 
-.goods {
+.list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
