--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.content {
+  min-height: calc(100vh - 64px);
+}
+.footer {
+  height: 64px;
+}
