--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 .content {
-  min-height: calc(100vh - 64px);
+    min-height: calc(100vh - 4rem);
 }
+
 .footer {
-  height: 64px;
+    height: 4rem;
 }
